--- a/localisation/KR_Canada_l_english.yml
+++ b/localisation/KR_Canada_l_english.yml
@@ -168,7 +168,7 @@ CAN_RAD_AST:0 "A Liberal Canada"
 CAN_RAD_USA_NEG:0 "Celebrated Canada's strength"
 CAN_RAD_AST_NEG:0 "Celebrated Canada's strength"
 
-### Threat ###
+### World Tension ###
 CAN_IRE_treaty_t:0 "Canadian-Irish Treaty"
 CAN_IRE_war_t:0 "Canada invaded Ireland"
 CAN_PSA_war_t:0 "Canada invaded the Pacific States"
