--- a/localisation/KR_Japan_Foreign_l_english.yml
+++ b/localisation/KR_Japan_Foreign_l_english.yml
@@ -906,7 +906,7 @@ SIAM_refused_GER:0 "Refused the Japanese"
 SNUBBED_JAPAN:0 "Snubbed us!"
 TRM_crackdown:0 "Korean Issue"
 
-### Threat ####
+### World Tension ###
 backed_down:0 "Backed down"
 sakoku:0 "Second Sakoku"
 jap_rus_peace_2_no:0 "Conference of Perm"
@@ -929,10 +929,12 @@ JAP_treaty_signed_qin:0 "Treaty of Qingdao"
 JAP_treaty_refuse_qin:0 "Refused Treaty"
 agressive_expansion:0 "Aggressive Expansion"
 jap_demand_indo:0 "Territorial demands"
+
 ### Factions ###
 co_prosperity_sphere:0 "Co-Prosperity Sphere"
 japan_research_name:0 "Rikagaku Kenkyusho"
 japan_research_desc:0 "Rikagaku Kenkyusho is the scientific wing of the Co-prosperity sphere aimed at helping enriching our colonies and allies."
+
 ### Tooltips ###
 can_blockade_kor:0 "We should consider moving our fleets to our Korean bases to blockade the rebels."
 JAP_russia_trigger1:0 "You must not puppet or be in faction with the Russian state."
