--- a/localisation/KR_Partitions_l_english.yml
+++ b/localisation/KR_Partitions_l_english.yml
@@ -52,6 +52,6 @@ part.10.b:0 "Create a loyal Britain."
 part.10.c:0 "Our loyal allies from Canada will return to Britain!"
 part.10.e:0 "Total occupation of Great Britain!"
 
-### Threat ###
+### World Tension ###
 occupy_ger:0 "Occupation of Germany"
 occupy_rhine:0 "Occupation of the Rhineland"
