(I am really stupid but also how did no-one notice this)

--- a/localisation/KR_Austria_l_english.yml
+++ b/localisation/KR_Austria_l_english.yml
@@ -69,6 +69,12 @@ AUS_racial_tensions_desc:0 "Racial tensions are growing in the newly reborn Empi
 AUS_racial_revolts:0 "Racial Revolts"
 AUS_racial_revolts:0 "The racial tensions have escalated and ushered in open revolt. These are dark times for Austria."
 
+### Theorist ###
+lohr:0 "Alexander Löhr"
+georg_johannes_von_trapp:0 "Georg Johannes von Trapp"
+votruba_josef:0 "Josef Votruba"
+eugen_sanger:0 "Eugen Sänger"
+
 ### Foci ###
 AUS_eco_council:0 "The Kaiserrat"
 AUS_black_monday_1_focus:0 "Reichsnorm Gesetz"
