--- a/localisation/KR_Japan_l_english.yml
+++ b/localisation/KR_Japan_l_english.yml
@@ -51,6 +51,9 @@ kure_naval_arsenal:0 "Kure Naval Arsenal"
 sasebo_naval_arsenal:0 "Sasebo Naval Arsenal"
 maizuru_naval_arsenal:0 "Maizuru Naval Arsenal"
 
+### Theorist ### 
+JAP_yoji_ito:0 "Yoji Ito"
+
 ### Foci ###
 JAP_NSA_focus:0 "The National Security Act"
 JAP_NSA_focus_desc:0 "A debate in the Diet regarding the national security act has been raging for the past few weeks, and it is time for us to decide which course our nation will take. Some conservative members of the Diet fear that if the act isn't passed, radical elements in society will try to seize power. The future of Japan is in our hands."
