--- a/localisation/KR_Nationalist_France_l_english.yml
+++ b/localisation/KR_Nationalist_France_l_english.yml
@@ -70,6 +70,9 @@ latecoere:0 "Latécoère"
 oran_construction_navale:0 "Société de Construction Navale d'Oran"
 chartiers_dakar:0 "Chantiers Navals de Dakar"
 
+### Theorists ###
+troupes_de_marine:0 "Troupes de Marine"
+
 ### Foci ###
 NFA_industrial_revival:0 "Industrial Expansion"
 NFA_industrial_revival_desc:0 "Our industry here in Africa is far behind the one the communards have on the mainland. If we want to defeat them we’ll have to strengthen our industry significantly."
