--- a/localisation/KR_Polish_Lithuanian_Commonwealth_l_english.yml
+++ b/localisation/KR_Polish_Lithuanian_Commonwealth_l_english.yml
@@ -28,6 +28,15 @@ plc_rwd:0 "RWD"
 plc_anbo:0 "ANBO"
 plc_sto_gdansk:0 "Stocznia Gdanskа"
 
+### Theorist ###
+plc_stefan_banach:0 "Stefan Banach"
+plc_stanislaw_ulam:0 "Stanislaw Ulam"
+plc_tadeusz_kutrzeba:0 "Tadeusz Kutrzeba"
+plc_povilas_plechavicius:0 "Povilas Plechavicius"
+plc_wladyslaw_sikorski:0 "Wladyslaw Sikorski"
+plc_ludomil_rayski:0 "Ludomil Rayski"
+plc_jerzy_swirski:0 "Jerzy Swirski"
+
 ### Opinion Modifiers ###
 PLC_JOIN_MITT_GER:0 "The Polish-Lithuanians want to join Mitteleuropa"
 PLC_JOIN_MITT:0 "The Poland-Lithuania join Mitteleuropa"
