--- a/localisation/KR_Qing_Empire_l_english.yml
+++ b/localisation/KR_Qing_Empire_l_english.yml
@@ -157,6 +157,22 @@ QIE_paternal_autocrat_party_long:0 "Imperial Party"
 QIE_national_populist_party:0 "IP"
 QIE_national_populist_party_long:0 "Imperial Party"
 
+### Theorist 
+kr_QIE_tsinghuo_university:0 "Tsinghua University"
+kr_QIE_baoding_military_academy:0 "Baoding Military Academy"
+kr_QIE_wu_peifu:0 "Wu Peifu"
+kr_QIE_fu_zuoyi:0 "Fu Zuoyi"
+kr_QIE_otto_cilax:0 "Otto Ciliax"
+kr_QIE_chen_cheng:0 "Chen Cheng"
+kr_QIE_zhang_zuolin:0 "Zhang Zuolin"
+kr_QIE_ma_zhanshan:0 "Ma Zhanshan"
+kr_QIE_fengtian_haijun_xueyuan:0 "Fèngtian Haijun Xuéyuàn"
+kr_QIE_zhang_xueliang:0 "Zhang Xueliang"
+kr_QIE_aog_board_der_industriellen_entwicklung:0 "A.O.G. Bord der industriellen Entwicklung"
+kr_QIE_alexander_von_falkenhausen:0 "Alexander von Falkenhausen"
+kr_QIE_helmuth_ocn_mucke:0 "Helmuth von Mucke"
+kr_QIE_gunther_pluschow:0 "Gunther Pluschow"
+
 ### Opinion Modifiers ###
 QIE_100_OPIUM:0 "100 Years since the Opium Wars"
 QIE_MIL_50:0 "Qing expands its military"
