--- a/localisation/KR_Ukraine_l_english.yml
+++ b/localisation/KR_Ukraine_l_english.yml
@@ -56,6 +56,13 @@ anatra:0 "Anatra"
 kr_beriev:0 "Beriev"
 black_sea_shipyard:0 "Chornomorsʹkyy sudnobudivnyy zavod"
 
+### Theorist ###
+kharkiv_aviation_institute:0 "Kharkivsky aviatsiynyy instytut"
+university_kyiv:0 "Universytet m.Kyyeva"
+kiev_military_academy:0 "Kyyiv Viyskova akademiya"
+odessa_state_maritime_academy:0 "Odeskyy morskyy koledzh"
+valentyn_p_hliuskho:0 "Valentyn P.Hliuskho"
+
 ### Opinion Modifiers ###
 UKR_GER_no_help_agr_crisis:0 "Germany betrayed our Peasants"
 UKR_GER_arr_khrushchev:0 "Ukraine arrested Kruschev"
