--- a/localisation/KR_White_Ruthenia_l_english.yml
+++ b/localisation/KR_White_Ruthenia_l_english.yml
@@ -38,6 +38,12 @@ minsk_automobile_plant:0 "Minsk Automotive Factory"
 baranovichi_aviation_repair_plant:0 "Baranovichi Aviation Repair Plant"
 erhard_martens:0 "Erhard Märtens"
 
+### Theorists ###
+bronislav_kaminski:0 "Bronislav Kaminski"
+jozef_dowbor_musnicki:0 "Jozef Dowbor-Musnicki"
+yurij_gamarnik:0 "Yurij Gamarnik"
+hans_baur:0 "Hans Baur"
+
 ### Opinion Modifiers ###
 WHR_WHR_stay_loyal:0 "White Ruthenia Stay loyal with Us"
 WHR_RUS_allies_us:0 "Russia Allies with Us"
