--- a/localisation/KR_USA_l_english.yml
+++ b/localisation/KR_USA_l_english.yml
@@ -16,6 +16,23 @@ USA_haitian_invitation_tooltip:0 "Haiti lies within the American Pond of the Car
 USA_dominican_invitation_tooltip:0 "The Dominican Republic lies within the American Pond of the Caribbean. It is in our interests to make sure that The Dominican Republic remains friendly to the United States and our interests."
 USA_peruvian_invitation_tooltip:0 "The government of Peru stands as a bulwark against syndicalism in the Andes. We should make sure that they remain friendly to American Businesses and of course the American government."
 
+### Theorists ###
+kr_john_von_neuman:0 "John Von Neuman"
+kr_edward_teller:0 "Edward Teller"
+kr_robert_oppenheimer:0 "Robert Oppenheimer"
+kr_robert_truax:0 "Robert Truax"
+kr_carl_spaatz:0 "Carl Spaatz"
+kr_chester_nimitz:0 "Chester Nimitz"
+kr_curtis_lemay:0 "Curtis Lemay"
+kr_dwight_eisenhower:0 "Dwight Eisenhower"
+kr_ernst_king:0 "Ernst King"
+kr_henry_arnold:0 "Henry Arnold"
+kr_hyman_rickover:0 "Hyman Rickover"
+kr_oman_bradley:0 "Oman Bradley"
+kr_maxwell_taylor:0 "Maxwell Taylor"
+kr_arthur_radford:0 "Arthur Radford"
+kr_george_patton:0 "George Patton"
+
 ### Foci - Presidents ###
 USA_1936_election:0 "The 1936 Election"
 USA_1936_election_desc:0 "The 1936 elections are the most ideological fraught elections in US history to date. Syndicalists and Nationalists, Republicans and Democrats all battle it out at the ballot box to see who will become the President of the United States of America. In the end though only one can be president."
