Magic, all companies in one place

--- a/localisation/KR_Siam_l_english.yml
+++ b/localisation/KR_Siam_l_english.yml
@@ -94,25 +94,25 @@ SIA_national_populist_party_long:0 "Khana Ratsadon(People's Party)"
 #SIA_Phraya_Thayarnpikart_cair_sco:0 "Phraya Thayarnpikart"
 #SIA_Phra_Silpasakrakorn_cair_mli:0 "Phra Silpasakrakor"
 
+### Tech Teams/Companies ### (Old - kept here for future reference, please don't delete it) ###
+#chaiseri:0 "Chaiseri Metal & Rubber"
+#thairung:0 "Thairung"
+#bangkok_dock:0 "Bangkok Dock Company"
+#rung_paisarn:0 "Rung Paisarn Heavy Industries"
+#SIA_DTI:0 "Defence Technology Institute"
+#siam_cement:0 "Siam Cement"
+#siam_aeronautics:0 "Siam Aeronautics"
+#SIA_TAI:0 "Thai Aviation Industries"
+#tanin:0 "Tanin Industrial Company"
+#SIA_MEF:0 "Military Explosives Factory"
+#chulalongkorn:0 "Chulalongkorn University"
+#SIA_ford:0 "Ford Siam"
+#SIA_SSR:0 "Siam State Railway"
+#RSAFW:0 "Royal Siamese Air Force Workshop"
+
 ### Opinion Modifiers ###
 SIA_seize_singapore:0 "Illegitimate Siamese annexation of Singapore"
 SIA_no_seize_singapore:0 "Siam ignored our Singapore colonies"
-
-### Tech Teams/Companies ###
-chaiseri:0 "Chaiseri Metal & Rubber"
-thairung:0 "Thairung"
-bangkok_dock:0 "Bangkok Dock Company"
-rung_paisarn:0 "Rung Paisarn Heavy Industries"
-SIA_DTI:0 "Defence Technology Institute"
-siam_cement:0 "Siam Cement"
-siam_aeronautics:0 "Siam Aeronautics"
-SIA_TAI:0 "Thai Aviation Industries"
-tanin:0 "Tanin Industrial Company"
-SIA_MEF:0 "Military Explosives Factory"
-chulalongkorn:0 "Chulalongkorn University"
-SIA_ford:0 "Ford Siam"
-SIA_SSR:0 "Siam State Railway"
-RSAFW:0 "Royal Siamese Air Force Workshop"
 
 ### Events ###
 siam.1.t:0 "Defeat"
