--- a/localisation/KR_Theorists_l_english.yml
+++ b/localisation/KR_Theorists_l_english.yml
@@ -1,10 +1,12 @@
-### Theorists ### WIP I KNOW THE ENOCDING IS WRONG ETC
+ï»¿l_english:
+
+### Theorists ###
 
 ### Austria ###
-lohr:0 "Alexander Löhr"
+lohr:0 "Alexander LÃ¶hr"
 georg_johannes_von_trapp:0 "Georg Johannes von Trapp"
 votruba_josef:0 "Josef Votruba"
-eugen_sanger:0 "Eugen Sänger"
+eugen_sanger:0 "Eugen SÃ¤nger"
  
 ### Canada ###
 royal_marines:0 "Royal Marines"
@@ -33,7 +35,7 @@ kr_QIE_otto_cilax:0 "Otto Ciliax"
 kr_QIE_chen_cheng:0 "Chen Cheng"
 kr_QIE_zhang_zuolin:0 "Zhang Zuolin"
 kr_QIE_ma_zhanshan:0 "Ma Zhanshan"
-kr_QIE_fengtian_haijun_xueyuan:0 "Fèngtian Haijun Xuéyuàn"
+kr_QIE_fengtian_haijun_xueyuan:0 "FÃ¨ngtian Haijun XuÃ©yuÃ n"
 kr_QIE_zhang_xueliang:0 "Zhang Xueliang"
 kr_QIE_aog_board_der_industriellen_entwicklung:0 "A.O.G. Bord der industriellen Entwicklung"
 kr_QIE_alexander_von_falkenhausen:0 "Alexander von Falkenhausen"
