--- a/localisation/KR_USA_l_english.yml
+++ b/localisation/KR_USA_l_english.yml
@@ -443,14 +443,12 @@ USA_german_american_trade:0 "German-American Trade"
 USA_entente_american_trade:0 "Canadian-American Trade"
 USA_federal_project_ones:0 "Federal Project One"
 USA_works_project_agency:0 "Work project Agency"
-USA_safety_reforms:0 "Saftey Reforms"
+USA_safety_reforms:0 "Safety Reforms"
 USA_work_projects:0 "Public Work Projects"
 USA_mine_bureau:0 "Mine Bureau"
 USA_agriculture_improvements:0 "Agricultural Improvements"
 USA_liberty_ship:0 "Liberty Ships"
 USA_democracy_arsenal:0 "Arsenal of Democracy"
-
-
 
 ### Parties ###
 USA_totalist_party:0 "ACP"
@@ -474,24 +472,7 @@ USA_paternal_autocrat_party_long:0 "America First Party"
 USA_national_populist_party:0 "AFP"
 USA_national_populist_party_long:0 "America First Party"
 
-### Theorists ###
-kr_john_von_neuman:0 "John Von Neuman"
-kr_edward_teller:0 "Edward Teller"
-kr_robert_oppenheimer:0 "Robert Oppenheimer"
-kr_robert_truax:0 "Robert Truax"
-kr_carl_spaatz:0 "Carl Spaatz"
-kr_chester_nimitz:0 "Chester Nimitz"
-kr_curtis_lemay:0 "Curtis Lemay"
-kr_dwight_eisenhower:0 "Dwight Eisenhower"
-kr_ernst_king:0 "Ernst King"
-kr_henry_arnold:0 "Henry Arnold"
-kr_hyman_rickover:0 "Hyman Rickover"
-kr_oman_bradley:0 "Oman Bradley"
-kr_maxwell_taylor:0 "Maxwell Taylor"
-kr_arthur_radford:0 "Arthur Radford"
-kr_george_patton:0 "George Patton"
-
-### Opinion ###
+### Opinion Modifiers ###
 USA_embargo_syndicalism:0 "American Embargo on the International"
 USA_american_trade:0 "American Trade Relations"
 
