Minor grammer fix thanks to ST Hélios | No Game No Life

--- a/localisation/KR_Austria_l_english.yml
+++ b/localisation/KR_Austria_l_english.yml
@@ -383,7 +383,7 @@ austria.33.a:0 "The Kaiser will lead us to victory."
 
 austria.50.t:0 "Racial Tension go violent"
 austria.50.d:0 "We have been too careless with this revolt. Several groups have started attacking our government. We're suffering from several acts of aggression against our troops and civilians."
-austria.50.a:0 "This will end very bad..."
+austria.50.a:0 "This will end very badly..."
 
 austria.60.t:0 "Racial Tensions finally calm down"
 austria.60.d:0 "It has been quite a while since Hungary has been forced to submit to Austrian rule. The racial tensions have had a big impact on our country, but now they are solved. Hopefully, forever."
