--- a/localisation/KR_Annexations_l_english.yml
+++ b/localisation/KR_Annexations_l_english.yml
@@ -91,17 +91,17 @@ annex.32.t:0 "Status of Flanders"
 annex.32.d:0 "For our direct support of the syndicalist cause, Commune of France has rewarded with territory of Flanders. We can integrate it directly, or create syndicalist Flanders under our control..."
 annex.32.a:0 "Directly annex Flanders"
 annex.32.b:0 "Liberate Flanders"
-annex.33.t:0 "The destiny of Luxembourg"
-annex.33.d:0 "After liberating the Luxembourg population from the violent reactionary government created by the Germans, we have to decide their destiny. We could recreate the country of Luxembourg, this time with a syndicalist government, or we could directly rule this lands. After all, some of them are true French territories."
-annex.33.a:0 "Luxembourg, a new Syndicalist country!"
-annex.33.b:0 "Absorb Luxembourg into France!"
+annex.33.t:0 "The destiny of Luxemburg"
+annex.33.d:0 "After liberating the Luxemburg population from the violent reactionary government created by the Germans, we have to decide their destiny. We could recreate the country of Luxemburg, this time with a syndicalist government, or we could directly rule this lands. After all, some of them are true French territories."
+annex.33.a:0 "Luxemburg, a new Syndicalist country!"
+annex.33.b:0 "Absorb Luxemburg into France!"
 annex.34.t:0 "Integration of Romandy"
 annex.34.d:0 "Romandy region centred in Geneva is now firmly integrated into our growing state."
 annex.34.a:0 "Great!"
 annex.35.t:0 "Integration of Wallonia"
 annex.35.d:0 "Wallonia region centred in Namur is now firmly integrated into our growing state."
-annex.36.t:0 "Integration of Luxembourg"
-annex.36.d:0 "The former imperial state of Luxembourg is now firmly integrated into our growing state."
+annex.36.t:0 "Integration of Luxemburg"
+annex.36.d:0 "The former imperial state of Luxemburg is now firmly integrated into our growing state."
 annex.37.t:0 "Integration of Alsace-Lorraine"
 annex.37.d:0 "The former imperial province of Alsace-Lorraine is now firmly integrated into our homeland."
 annex.38.t:0 "Integration of Bosnia"
