--- a/localisation/KR_Portugal_l_english.yml
+++ b/localisation/KR_Portugal_l_english.yml
@@ -28,7 +28,7 @@ por.1.a:0 "Liberate Portugal"
 por.1.b:0 "We will occupy them for now at least"
 
 por.2.t:0 "Monarchism in Portugal"
-por.2.d:0 "It's come into question whether Portugal should become a monarchy. The claimant to the Portuguese throne is Duarte Nuno cousin to the last King of por. The House of Nassau-Weilburg also has a claim to the throne, and the sister of the Grand-Duchess of Luxembourg, Princess Sophie, has been put forth to become Queen. Finally, there is Princess Teresa Cristina of Sachsen-Coburg-Gotha-Braganza who is from both German and Brazilian - thus, Portuguese - royalty."
+por.2.d:0 "It's come into question whether Portugal should become a monarchy. The claimant to the Portuguese throne is Duarte Nuno cousin to the last King of por. The House of Nassau-Weilburg also has a claim to the throne, and the sister of the Grand-Duchess of Luxemburg, Princess Sophie, has been put forth to become Queen. Finally, there is Princess Teresa Cristina of Sachsen-Coburg-Gotha-Braganza who is from both German and Brazilian - thus, Portuguese - royalty."
 por.2.a:0 "Install Sophia Caroline as Queen"
 por.2.b:0 "Install Duarte Nuno as King"
 por.2.c:0 "Install Teresa Cristina as Queen"
