--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -2428,36 +2428,36 @@ LIT_totalist:0 "People's Republic of Lithuania"
 LIT_totalist_ADJ:0 "Lithuanian"
 LIT_totalist_DEF:0 "the People's Republic of Lithuania"
 
-LUX_authoritarian_democrat:0 "Royalist Luxembourg"
-LUX_authoritarian_democrat_ADJ:0 "Luxembourg"
-LUX_authoritarian_democrat_DEF:0 "Royalist Luxembourg"
-LUX_market_liberal:0 "Luxembourg"
-LUX_market_liberal_ADJ:0 "Luxembourg"
-LUX_market_liberal_DEF:0 "Luxembourg"
-LUX_national_populist:0 "Royalist Luxembourg"
-LUX_national_populist_ADJ:0 "Luxembourg"
-LUX_national_populist_DEF:0 "Royalist Luxembourg"
-LUX_paternal_autocrat:0 "Royalist Luxembourg"
-LUX_paternal_autocrat_ADJ:0 "Luxembourg"
-LUX_paternal_autocrat_DEF:0 "Royalist Luxembourg"
-LUX_radical_socialist:0 "Luxembourg"
-LUX_radical_socialist_ADJ:0 "Luxembourg"
-LUX_radical_socialist_DEF:0 "Luxembourg"
-LUX_social_conservative:0 "Luxembourg"
-LUX_social_conservative_ADJ:0 "Luxembourg"
-LUX_social_conservative_DEF:0 "Luxembourg"
-LUX_social_democrat:0 "Luxembourg"
-LUX_social_democrat_ADJ:0 "Luxembourg"
-LUX_social_democrat_DEF:0 "Luxembourg"
-LUX_social_liberal:0 "Luxembourg"
-LUX_social_liberal_ADJ:0 "Luxembourg"
-LUX_social_liberal_DEF:0 "Luxembourg"
-LUX_syndicalist:0 "Luxembourg"
-LUX_syndicalist_ADJ:0 "Luxembourg"
-LUX_syndicalist_DEF:0 "Luxembourg"
-LUX_totalist:0 "Luxembourg"
-LUX_totalist_ADJ:0 "Luxembourg"
-LUX_totalist_DEF:0 "Luxembourg"
+LUX_authoritarian_democrat:0 "Royalist Luxemburg"
+LUX_authoritarian_democrat_ADJ:0 "Luxemburg"
+LUX_authoritarian_democrat_DEF:0 "Royalist Luxemburg"
+LUX_market_liberal:0 "Luxemburg"
+LUX_market_liberal_ADJ:0 "Luxemburg"
+LUX_market_liberal_DEF:0 "Luxemburg"
+LUX_national_populist:0 "Royalist Luxemburg"
+LUX_national_populist_ADJ:0 "Luxemburg"
+LUX_national_populist_DEF:0 "Royalist Luxemburg"
+LUX_paternal_autocrat:0 "Royalist Luxemburg"
+LUX_paternal_autocrat_ADJ:0 "Luxemburg"
+LUX_paternal_autocrat_DEF:0 "Royalist Luxemburg"
+LUX_radical_socialist:0 "Luxemburg"
+LUX_radical_socialist_ADJ:0 "Luxemburg"
+LUX_radical_socialist_DEF:0 "Luxemburg"
+LUX_social_conservative:0 "Luxemburg"
+LUX_social_conservative_ADJ:0 "Luxemburg"
+LUX_social_conservative_DEF:0 "Luxemburg"
+LUX_social_democrat:0 "Luxemburg"
+LUX_social_democrat_ADJ:0 "Luxemburg"
+LUX_social_democrat_DEF:0 "Luxemburg"
+LUX_social_liberal:0 "Luxemburg"
+LUX_social_liberal_ADJ:0 "Luxemburg"
+LUX_social_liberal_DEF:0 "Luxemburg"
+LUX_syndicalist:0 "Luxemburg"
+LUX_syndicalist_ADJ:0 "Luxemburg"
+LUX_syndicalist_DEF:0 "Luxemburg"
+LUX_totalist:0 "Luxemburg"
+LUX_totalist_ADJ:0 "Luxemburg"
+LUX_totalist_DEF:0 "Luxemburg"
 
 LYB_authoritarian_democrat:0 "Tripolitania"
 LYB_authoritarian_democrat_ADJ:0 "Tripolitanian"
