--- a/localisation/goals_l_english.yml
+++ b/localisation/goals_l_english.yml
@@ -120,7 +120,7 @@ invasion_of_south_africa:0 "The Invasion of South Africa"
 invasion_of_south_africa_desc:0 "Our unstoppable forces are now in a position to strike at South Africa. Its conquest should make it very difficult for Allied naval units to enter the Indian Ocean without use of the Suez Canal. The decadent British Empire is unravelling before our eyes."
 invasion_of_south_africa_short_desc:0 "§LLand forces in South Africa and destroy all opposition.§"
 extend_maginot_line:0 "Extend the Maginot Line"
-extend_maginot_line_desc:0 "Our border towards Germany is protected by the formidable Maginot Line, but a flanking German thrust through Belgium and Luxembourg, just as in 1914, is always a possibility. We must extend our heavy fortifications all the way to the English Channel, even if this means leaving Belgium at the mercy of the Germans."
+extend_maginot_line_desc:0 "Our border towards Germany is protected by the formidable Maginot Line, but a flanking German thrust through Belgium and Luxemburg, just as in 1914, is always a possibility. We must extend our heavy fortifications all the way to the English Channel, even if this means leaving Belgium at the mercy of the Germans."
 extend_maginot_line_short_desc:0 "§LExtend the Maginot Line all the way to the English Channel.§"
 improve_alpine_line:0 "Improve the Alpine Line"
 improve_alpine_line_desc:0 "The 'Little Maginot Line' defending our southern border towards Italy has always been of secondary importance in our military planning. Fascist Italy is becoming increasingly aggressive, however, and we know they have territorial ambitions in southern France. We must bring the fortifications of the Alpine Line up to the same standards of those of the Maginot Line."
