--- a/localisation/state_names_l_english.yml
+++ b/localisation/state_names_l_english.yml
@@ -7,7 +7,7 @@ STATE_4:0 "Niederösterreich"
 STATE_5:0 "Ostpreussen"
 STATE_6:0 "Vlaanderen"
 STATE_7:0 "Holland"
-STATE_8:0 "Luxembourg"
+STATE_8:0 "Luxemburg"
 STATE_9:0 "Čechy"
 STATE_10:0 "Warszawa"
 STATE_11:0 "Vilnius"
