--- a/localisation/victory_points_l_english.yml
+++ b/localisation/victory_points_l_english.yml
@@ -316,7 +316,7 @@ VICTORY_POINTS_6536:0 "Lorient"
 VICTORY_POINTS_6558:0 "Posen"
 VICTORY_POINTS_6560:0 "Gent"
 VICTORY_POINTS_6573:0 "Kosice"
-VICTORY_POINTS_6583:0 "Luxembourg City"
+VICTORY_POINTS_6583:0 "Luxemburg City"
 VICTORY_POINTS_6598:0 "Antwerpen"
 VICTORY_POINTS_6606:0 "Bologna"
 VICTORY_POINTS_6613:0 "Lyon"
