Tweaks due to Zara's feedback, would like to have the oil shortage modifier last until a solution is found, but atm there isn't any, so it is timed

--- a/localisation/KR_Germany_l_english.yml
+++ b/localisation/KR_Germany_l_english.yml
@@ -1032,7 +1032,8 @@ GER_post_idea:0 "German Post Office"
 GER_embrace_faud_idea:0 "Freie Arbeiterunion Deutschlands"
 DCGB:0 "Deutscher Christlicher Gewerkschaftsbund"
 GER_institut_idea:0 "Institut für Luftfahrttechnik"
-GER_oil_shipments:0 "Oil Shipments from Romania"
+GER_rom_oil_shipments:0 "Oil Shipments from Romania"
+GER_oil_shortage:0 "Oil Shortage"
 
 ### Tooltips ###
 GER_mackensen_retires:0 "You can now reform the military command"
