--- a/localisation/victory_points_l_english.yml
+++ b/localisation/victory_points_l_english.yml
@@ -397,7 +397,7 @@ VICTORY_POINTS_7616:0 "Blagoveshchensk"
 VICTORY_POINTS_7617:0 "Colón"
 VICTORY_POINTS_7621:0 "Mar del Plata"
 VICTORY_POINTS_7622:0 "Havana"
-VICTORY_POINTS_7630:0 "Panamá"
+VICTORY_POINTS_7630:0 "Panamá City"
 VICTORY_POINTS_7645:0 "Stung Treng" #Chiang Taeng/Xiang Taeng
 VICTORY_POINTS_7660:0 "Santo Domingo"
 VICTORY_POINTS_7661:0 "Bakü"
