Changed localisation on Panama and Luxemburg---fix

--- a/localisation/victory_points_l_english.yml
+++ b/localisation/victory_points_l_english.yml
@@ -316,7 +316,7 @@ VICTORY_POINTS_6536:0 "Lorient"
 VICTORY_POINTS_6558:0 "Posen"
 VICTORY_POINTS_6560:0 "Gent"
 VICTORY_POINTS_6573:0 "Kosice"
-VICTORY_POINTS_6583:0 "Luxemburg City"
+VICTORY_POINTS_6583:0 "Luxembourg City"
 VICTORY_POINTS_6598:0 "Antwerpen"
 VICTORY_POINTS_6606:0 "Bologna"
 VICTORY_POINTS_6613:0 "Lyon"
@@ -397,7 +397,7 @@ VICTORY_POINTS_7616:0 "Blagoveshchensk"
 VICTORY_POINTS_7617:0 "Colón"
 VICTORY_POINTS_7621:0 "Mar del Plata"
 VICTORY_POINTS_7622:0 "Havana"
-VICTORY_POINTS_7630:0 "Panamá City"
+VICTORY_POINTS_7630:0 "Panamá"
 VICTORY_POINTS_7645:0 "Stung Treng" #Chiang Taeng/Xiang Taeng
 VICTORY_POINTS_7660:0 "Santo Domingo"
 VICTORY_POINTS_7661:0 "Bakü"
