Ukrainian focus tree got full localization. Time to write events and effects for focuses

--- a/localisation/KR_Ukraine_l_english.yml
+++ b/localisation/KR_Ukraine_l_english.yml
@@ -458,3 +458,22 @@ UKR_New_Heir:0 "A successor for the King"
 UKR_New_Heir_desc:0 "Unfortunately, our King has no children and as such he has to choose his successor. Only two candidatures are considered by the government and ministers - the nephew of Vasily, Leo Stefan Habsburg and Daniil Skoropadsky, son of our Hetman. We have to choose one of them."
 UKR_Explosion_Dnieper:0 "Explosion on the Dnieper"
 UKR_Explosion_Dnieper_desc:0 "Today at 11 a.m. when our King Vasily was on his yacht, an explosion rips apart his small ship. Our mass media got a message that the yacht was mined by a syndicalist group, which had decided to keep up its struggle against our government. Unfortunately, there was no chance to save our King, and different political groups want to use this chance and begin to govern Ukraine."
+
+UKR_Ukrainian_Recovery:0 "Ukrainian Recovery"
+UKR_Ukrainian_Recovery_desc:0 "Social problems always provoke political instability. Lots of peasants join the syndicalist, nationalist or Russian separatist because of the awful living conditions. If we want to save Ukraine from the worst, we should start a recovery programme and help the poorest grain-growers in the Central Ukraine and provide our population with the cheap electricity, but we need investments."
+UKR_First_Loan:0 "Ask for the loan in Germany"
+UKR_First_Loan_desc:0 "We should ask Germany for a loan, which we will be able to use for the electrification of the the poorest grain-growers. They must understand, that the situation in Ukraine is unstable and it is important to help us, since we secure the German interests in the East."
+UKR_First_TaxHike:0 "Taxes for the electrification"
+UKR_First_TaxHike_desc:0 "We must use our own possibilities and raise the taxes, since there is no other way to get investments for the programm of the electrification of the villages in the Central Ukraine. We hope that our peasants will understand us."
+UKR_Electrification:0 "Rural Electrification"
+UKR_Electrification_desc:0 "Our government has finally been able to electrify all the villages in Central Ukraine. As a result our peasants will be able to produce more agricultural goods and supplies. Ukraine has started to recover from Black Monday."
+UKR_Second_Loan:0 "Loan for the Industrialisation"
+UKR_Second_Loan_desc:0 "We have improved the situation in Central Ukraine - it's time to do something in the Eastern part of the country. All these factories, built by the Tsarist government, should be modernised as fast as we can. But we need German investments and new technologies from our ally in Berlin!"
+UKR_Second_TaxHike:0 "Taxes for the Industrialisation"
+UKR_Second_TaxHike_desc:0 "The electricity is available all over the Central Ukraine - now it's time to rebuild industry in the Eastern part of the country. All these factories, built by the Tsarist government, should be modernised as fast as we can. And that's why we have to raise the taxes. Again."
+UKR_Kharkov_Industry:0 "Kharkov Industry"
+UKR_Kharkov_Industry_desc:0 "Kharkov has always been one of the most populated city in Ukraine, but we has never used this advantage in our economy. Now it's a perfect time to launch a formation of a new industrial region in Kharkov region and finally make our industry strong enough."
+UKR_Revive_Agriculture:0 "Revive Agriculture"
+UKR_Revive_Agriculture_desc:0 "Our main aim was to turn Ukraine into the breadbasket of Europe, since we wanted to become extremely important for Germany and Mitteleuropa. But on the contrary we became even more dependent from the German goods after the Black Monday. Now we must reconstruct our national agriculture market, using our industry and new agricultural tools."
+UKR_Donbass_Industry:0 "Donbass Industry"
+UKR_Donbass_Industry_desc:0 "After a long period of political turbulence, the situation in Ukraine is more or less stable. And we have a good chance to continue reforms. Our long-term aim is to develop industry in the East of Ukraine. Thanks to the Tsarist regime, we have just to re-open old Donbass factories and modernize them a little or launch a formation of a new industrial region"
