Communications Clique Strike Event, please ask before random localization edits.

--- a/localisation/KR_Fengtian_l_english.yml
+++ b/localisation/KR_Fengtian_l_english.yml
@@ -461,7 +461,9 @@ fengtian.43.c:0 "Nanjing is our new capital"
 fengtian.new.1.t:0 "Huanghanhui Crackdown"
 fengtian.new.1.d:0 "The Huanghanhui, or Imperial Han Society, has been found to be using bribes and threats of violence to coerce low-level members of the Assembly. Unfortunately this information has gone public, even as the Assemblymen in question have been removed from office, and local police pursue additional suspects. \n \n Shortly after information regarding this incident was presented to Japanese authorities, Kempeitai agents were observed entering an enclosed compound outside Mukden, and reports indicate gunfire was exchanged. Over a dozen bodies were removed from the premises, and it would be unwise to pursue this matter any further."
 fengtian.new.1.a:0 "Troubling"
-
+fengtian.new.2.t:0 "Communications Clique Leads Railroad Strikes"
+fengtian.new.2.d:0 "The Communications Clique, with its widespread influence in Chinese-owned Manchurian railroads like the CER, has resorted to encouraging union activity and strikes to compensate for its recent losses of influence in government. The Clique will likely only go so far, for risk of creating something it cannot control, but their methods have already been fairly successful in demonstrating their political and economic clout."
+fengtian.new.2.a:0 "Unfortunate but necessary"
 ### Informal Empire Mechanic ###
 fengtian.informalempire.1.t:0 "Expel the Japanese Bandits!"
 fengtian.informalempire.1.d:0 "The time has come to declare our independence, drive the Japanese intruders from China, and end a century of unbearable national humiliation! We will naturally be deprived of foreign material support, but the Chinese people now rally behind us. Onward!"
