--- a/localisation/KR_Hawaii_l_english.yml
+++ b/localisation/KR_Hawaii_l_english.yml
@@ -1,9 +1,8 @@
 ﻿l_english:
 
 ### Foci ###
-HAW_politics:0 "Future of Hawaii"
+HAW_politics:0 "Future of Hawai'i"
 HAW_politics_desc:0 ""
-
 ### Politics Foci ###
 HAW_monarchy:0 "Restore the Monarchy"
 HAW_monarchy_desc:0 ""
@@ -13,9 +12,9 @@ HAW_constitutional_monarchy:0 "Constitutional Monarchy"
 HAW_constitutional_monarchy_desc:0 ""
 HAW_punana_leo:0 "Punana Leo"
 HAW_punana_leo_desc:0 ""
-HAW_hawaiian_renassiance:0 "Hawaiian Renaissance"
+HAW_hawaiian_renassiance:0 "Hawai'ian Renaissance"
 HAW_hawaiian_renassiance_desc:0 ""
-HAW_republic:0 "Hawaiian Republic"
+HAW_republic:0 "Hawai'ian Republic"
 HAW_republic_desc:0 ""
 HAW_support_big_five:0 "Support the Big Five"
 HAW_support_big_five_desc:0 ""
@@ -25,7 +24,7 @@ HAW_education_expansion:0 "Education Expansion"
 HAW_education_expansion_desc:0 ""
 HAW_multi_culturalism:0 "Multiculturalism"
 HAW_multi_culturalism_desc:0 ""
-HAW_hawaiian_revolution:0 "Hawaiian Revolution"
+HAW_hawaiian_revolution:0 "Hawai'ian Revolution"
 HAW_hawaiian_revolution_desc:0 ""
 HAW_direct_democracy:0 "Direct Democracy"
 HAW_direct_democracy_desc:0 ""
@@ -55,17 +54,17 @@ HAW_thriving_economy:0 "Thriving Economy"
 HAW_thriving_economy_desc:0 ""
 
 ### Navy Foci ###
-HAW_navy:0 "Hawaiian Navy"
+HAW_navy:0 "Hawai'ian Navy"
 HAW_navy_desc:0 ""
 HAW_submarine_doctrines:0 "Submarine Doctrines"
 HAW_submarine_doctrines_desc:0 ""
 HAW_submarine_focus:0 "Submarine Focus"
 HAW_submarine_focus_desc:0 ""
-HAW_grand_navy:0 "Hawaiian Grand Navy"
+HAW_grand_navy:0 "Hawai'ian Grand Navy"
 HAW_grand_navy_desc:0 ""
 HAW_escorts:0 "Escorts"
 HAW_escorts_desc:0 ""
-HAW_hawaiian_marines:0 "Hawaiian Marines"
+HAW_hawaiian_marines:0 "Hawai'ian Marines"
 HAW_hawaiian_marines_desc:0 ""
 HAW_improve_our_fleet:0 "Improve Our Fleet"
 HAW_improve_our_fleet_desc:0 ""
@@ -77,7 +76,7 @@ HAW_carriers:0 "Carrier Support"
 HAW_carriers_desc:0 ""
 
 ### Army Foci ###
-HAW_army:0 "Hawaiian National Guard"
+HAW_army:0 "Hawai'ian National Guard"
 HAW_army_desc:0 ""
 HAW_focus_on_planning:0 "High Command"
 HAW_focus_on_planning_desc:0 ""
@@ -91,7 +90,7 @@ HAW_strategic_information_services:0 "Strategic Information Services"
 HAW_new_army:0 "A Modern Army"
 
 ### Air Foci ###
-HAW_airforce:0 "Create the Hawaiian Air-Force"
+HAW_airforce:0 "Create the Hawai'ian Air-Force"
 HAW_airforce_desc:0 ""
 HAW_fighters:0 "Favour Fighters"
 HAW_fighters_desc:0 ""
@@ -103,7 +102,7 @@ HAW_naval_bombers:0 "Naval Bombers"
 HAW_naval_bombers_desc:0 ""
 HAW_expand_airports:0 "Expand Air-Ports"
 HAW_expand_airports_desc:0 ""
-HAW_hawaiian_jets:0 "Hawaiian Jets"
+HAW_hawaiian_jets:0 "Hawai'ian Jets"
 HAW_hawaiian_jets_desc:0 ""
 HAW_radar:0 "Warning Systems"
 HAW_radar_desc:0 ""
@@ -146,26 +145,39 @@ HAW_japanese_tech_sharing_desc:0 ""
 
 ### Parties ###
 HAW_totalist_party:0 "HCP"
-HAW_totalist_party_long:0 "Hawaiian Communist Party"
-HAW_radical_socialist_party:0 "CSH"
-HAW_radical_socialist_party_long:0 "Combined Syndicates of Hawaii"
+HAW_totalist_party_long:0 "Hawai'ian Communist Party"
 HAW_syndicalist_party:0 "PWU"
 HAW_syndicalist_party_long:0 "Pineapple Workers Union"
+HAW_radical_socialist_party:0 "CSH"
+HAW_radical_socialist_party_long:0 "Combined Syndicates of Hawai'i"
 HAW_social_democrat_party:0 "SPW"
-HAW_social_democrat_party_long:0 "Socialist Party of Hawaii"
+HAW_social_democrat_party_long:0 "Socialist Party of Hawai'i"
 HAW_social_liberal_party:0 "Hawaii Democrats"
-HAW_social_liberal_party_long:0 "Democratic Party of Hawaii"
-HAW_market_liberal_party:0 "Hawaii Republicans"
-HAW_market_liberal_party_long:0 "Hawaii Republican Party"
+HAW_social_liberal_party_long:0 "Democratic Party of Hawai'i"
+HAW_market_liberal_party:0 "Hawai'i Republicans"
+HAW_market_liberal_party_long:0 "Hawai'i Republican Party"
 HAW_social_conservative_party:0 "Monarchists"
 HAW_social_conservative_party_long:0 "Monarchist Party"
 HAW_authoritarian_democrat_party:0 "Military Junta"
 HAW_authoritarian_democrat_party_long:0 "Military Junta"
 HAW_paternal_autocrat_party:0 "HFP"
-HAW_paternal_autocrat_party_long:0 "Hawaii First Party"
+HAW_paternal_autocrat_party_long:0 "Hawai'i First Party"
 HAW_national_populist_party:0 "HFP"
-HAW_national_populist_party_long:0 "Hawaii First Party"
+HAW_national_populist_party_long:0 "Hawai'i First Party"
+### Ideas ###
 
+### Cosmetic Tag ###
+HAW_kingdom_social_democrat:0 "Kingdom of Hawai'i"
+HAW_kingdom_social_liberal:0 "Kingdom of Hawai'i"
+HAW_kingdom_market_liberal:0 "Kingdom of Hawai'i"
+HAW_kingdom_social_conservative:0 "Kingdom of Hawai'i"
+HAW_kingdom_authoritarian_democrat:0 "Kingdom of Hawai'i"
+HAW_kingdom_paternal_autocrat:0 "Kingdom of Hawai'i"
+HAW_kingdom_national_populist:0 "Kingdom of Hawai'i"
+HAW_commune_totalist:0 "Commune of Hawai'i"
+HAW_commune_radical_socialist:0 "Commune of Hawai'i"
+HAW_commune_syndicalist:0 "Commune of Hawai'i"
+HAW_commune_social_democrat:0 "Commune of Hawai'i"
 ### Opinion Modifiers ###
 INDHAW_CAL:0 "Hawaii remain independent"
 INDHAW:0 "Hawaii remain independent"
@@ -191,18 +203,6 @@ hawaii.3.a:0 "Excellent"
 hawaii.4.t:0 "Hawaii Occupies Midway, Wake and Other Pacific Islands"
 hawaii.4.d:0 "The garrisons on Wake and Midway have joined Hawaii to ensure that they are not occupied by another power. There is unfortunately nothing the US can do about it."
 hawaii.4.a:0 "Damn"
-hawaii.5.t:0 "The Future of Hawaii"
-hawaii.5.d:0 "The American civil war has concluded and the United States no longer exists. It is clear that Hawaii must make a decision about the future. The Pacific States of America are willing to abide by any decision that Hawaii makes about its future."
-hawaii.5.a:0 "Hawaii will remain independent"
-hawaii.5.b:0 "Propose an alliance with the PSA"
-hawaii.5.c:0 "We should join the PSA"
-hawaii.6.t:0 "Hawaii Proposes an Alliance"
-hawaii.6.d:0 "The Hawaii government had proposed an alliance between the two states. An advantageous situation for sure but some in the PSA government were worried about how other governments would react to this decision."
-hawaii.6.a:0 "Welcome"
-hawaii.6.b:0 "No thanks"
-hawaii.7.t:0 "Hawaii Joins the PSA"
-hawaii.7.d:0 "The government in Hawaii has decided to join the Pacific States of America"
-hawaii.7.a:0 "Welcome to the PSA"
 hawaii.8.t:0 "Petitioning the Entente"
 hawaii.8.d:0 "The defeat of the Pacific States of America and United States of America at the hands of the CSA had left the islands of Hawaii with no allies and an uncertain future. The Entente appeared to be the natural choice to ally with against the CSA but people in Hawaii were worried that this could draw the islands into a war. Opinion was split on the islands."
 hawaii.8.a:0 "Send the request"
@@ -223,20 +223,21 @@ hawaii.12.a:0 "Behold our pineapples!"
 hawaii.13.t:0 "Resource Expansion"
 hawaii.13.d:0 "The necessity for Hawaii to expand it's resources as well as its industry has prompted a scouring of the islands for any natural resources that could be found."
 hawaii.13.a:0 "More fuel for the pineapple factories!"
+
 hawaii.14.t:0 "Island Agitators"
 hawaii.14.d:0 "The CSA's extensive network of spies had led to their learning of the labour issues that were cropping up on the islands in Hawaii. The islands were not part of the CSA's overall strategy but the plight of the workers was in the best interest of the CSA and if it happened to ensure the Hawaii islands came under the control of the CSA then so be it."
 hawaii.14.a:0 "Send in some men to support the workers."
 hawaii.14.b:0 "Forget Hawaii. We need to finish America."
 hawaii.15.t:0 "The Red Pineapple Riot"
-hawaii.15.d:0 "The arrival of CSA agitators had enticed the workers of Hawaii into a near frenzy. Protests were launched across the islands. When the police attempted to control the protest they were pelted with pineapples that had been painted red. Several policemen were injured and the crowd effectively dispersed but the riot had seriously shaken the local authorities."
+hawaii.15.d:0 "The arrival of CSA agitators had enticed the workers of Hawai'i into a near frenzy. Protests were launched across the islands. When the police attempted to control the protest they were pelted with pineapples that had been painted red. Several policemen were injured and the crowd effectively dispersed but the riot had seriously shaken the local authorities."
 hawaii.15.a:0 "We must reform."
 hawaii.15.b:0 "Arresting the CSA agitators should do it."
 hawaii.16.t:0 "Trade Union of Hawaii"
 hawaii.16.d:0 "The Pineapple Union of Hawaii had been slowly gaining power since the Hawaiian government had instituted reforms. The CSA government was divided as to whether this was enough or not. Many believed that the islands should be forced to adopt the ideals of the CSA but there are many who see the islands as making a natural progression to Syndicalism."
 hawaii.16.a:0 "Demand Hawaii reforms"
 hawaii.16.b:0 "Let their revolution evolve"
-hawaii.17.t:0 "Trade Union of Hawaii"
-hawaii.17.d:0 "Since the reforms on the island the trade unionists have been gaining more and more power. The CSA had been assisting in the organisation of the unions and had been pressuring the Hawaii government for more reforms. The reforms that were proposed would make the islands a virtual puppet of the CSA and are seen by some as just one step to annexation by the CSA. While many were resistant to both ideas, many more saw that they had little choice in the matter"
+hawaii.17.t:0 "Pineapple Union of Hawai'i"
+hawaii.17.d:0 "Since the reforms on the island the trade unionists have been gaining more and more power. The CSA had been assisting in the organisation of the unions and had been pressuring the Hawai'i government for more reforms. The reforms that were proposed would make the islands a virtual puppet of the CSA and are seen by some as just one step to annexation by the CSA. While many were resistant to both ideas, many more saw that they had little choice in the matter"
 hawaii.17.a:0 "Bow to the CSA reforms"
 hawaii.17.c:0 "We will never submit to the CSA"
 hawaii.18.t:0 "Hawaii Becomes a CSA Protectorate"
@@ -253,13 +254,13 @@ hawaii.21.t:0 "Hawaii Petitions the League of American States"
 hawaii.21.d:0 "Hawaii has recently sent a petition to Washington to join the League of American States. Should we welcome them into the League of American States or not?"
 hawaii.21.a:0 "Welcome them into the League"
 hawaii.21.b:0 "We don't need Hawaii"
-hawaii.22.t:0 "Hawaii in the League of American States"
+hawaii.22.t:0 "Hawai'i in the League of American States"
 hawaii.22.d:0 "The Americans have accepted our petition to join the League of American States. This is a great day, and with the mainland Americans at our side our independence is now secured. "
 hawaii.22.a:0 "Welcome Friends!"
 hawaii.23.t:0 "Petition is Rejected"
 hawaii.23.d:0 "The Americans have rejected our petition to join the League of American States. We are on our own it seems!"
 hawaii.23.a:0 "We are on our own!"
-hawaii.24.t:0 "Dealing Syndicalist Hawaii"
+hawaii.24.t:0 "Dealing Syndicalist Hawai'i"
 hawaii.24.d:0 "The civil war is over in America and it looks like our comrades have failed to bring the revolution there. Not surprisingly the Americans have taken a dim view against our own revolution and are demanding that we dismantle the revolution or face their might."
 hawaii.24.a:0 "We can not take that risk"
 hawaii.24.b:0 "The Revolution goes on!"
@@ -273,18 +274,21 @@ hawaii.26.b:0 "Peace Prevails"
 hawaii.27.t:0 "Friendly Greetings"
 hawaii.27.d:0 "While we were dealing with the syndicalists here in America, so to were the Hawaiians dealing with syndicalists. Thankfully just like in America, they have destroyed the syndicalist menace in Hawaii and have sent us friendly greetings and an offer to work with American business."
 hawaii.27.a:0 "Aloha Hawaii!"
-hawaii.28.t:0 ""
-hawaii.28.d:0 ""
-hawaii.28.a:0 ""
-hawaii.29.t:0 ""
-hawaii.29.d:0 ""
-hawaii.29.a:0 ""
-hawaii.30.t:0 ""
-hawaii.30.d:0 ""
-hawaii.30.a:0 ""
-hawaii.31.t:0 ""
-hawaii.31.d:0 ""
-hawaii.31.a:0 ""
+
+hawaii.28.t:0 "The Future of Hawai'i?"
+hawaii.28.d:0 "We are now cut off from America and for the first time in decades independent again. We must decide our fate. Some are clamoring for a return to the Monarchy of Hawai'i that was overthrown by the Americans in 1893. However others are claiming that the age of monarchy is dead and we should set up a republic inspired by the Americans. While union leaders working among the lower classes on the plantations and factories might try and make a move here."
+hawaii.28.a:0 "Lets Restore the Monarchy!"
+hawaii.28.b:0 "Lets establish a Republic"
+hawaii.28.c:0 "It is time for a revolution!"
+hawaii.29.t:0 "Restoration of the Monarchy"
+hawaii.29.d:0 "In a lavish ceremony at the ʻIolani Palace in Honolulu, Jonah Kalanianaʻole was crowned as King of Hawai'i with his wife Elizabeth Kahanu Kalanianaʻole was crowned queen of Hawai'i. The ceremony was overseen by Episcopal Bishop Samuel Littell. The coronation was filled to the brim with cheering crowds happy to see the coronation of their new king."
+hawaii.29.a:0 "The life of the land is perpetuated in righteousness"
+hawaii.30.t:0 "Establishing a republic"
+hawaii.30.d:0 "At the ʻIolani Palace delegates from across Hawai'i have agreed to form a republic. All have taken an oath to protect and defend Hawai'i. Crowds have gathered outside to hear the proclamation of a republic cheering on. There will be much work to set up the republic of Hawai'i, not the least of an election will need to be held in the future. "
+hawaii.30.a:0 "Long Live Hawai'i"
+hawaii.31.t:0 "The Hawai'ian Revolution!"
+hawaii.31.d:0 "While the rich plantation owners, industrialists, nobility all gathered in Honolulu to discuss the future of Hawai'i they paid little heed to the poor toiling away on the plantations or in the factories. Following the lead of the CSA in America, a number of labor organizes like Jack Hall have gone to the various plantations and factories and have lead an insurrection against the ruling elites. Fleeing from Honolulu as fast as they can, a new government was set up in the capital, a government truly for the people."
+hawaii.31.a:0 "Break the Chains!"
 hawaii.32.t:0 ""
 hawaii.32.d:0 ""
 hawaii.32.a:0 ""
@@ -297,9 +301,4 @@ hawaii.34.a:0 ""
 
 
 
-
-
-hawaii.21.t:0 "The rise of Native Nationalism"
-hawaii.21.d:0 "With our nation having been free for some time now, the natives have organised a movement for the restoration of the Hawaiian monarchy. While this would normally be a source of great concern, considering the deposed family has married into the industrial families, a restoration would be beneficial... The current pretender to the throne, Edward D. Kawananakoa, would be easy to control. A monarchy would expand our nation's cultural independence, and give the populace a figurehead..."
-hawaii.21.a:0 "Restore the monarchy!"
 
