Ask first, fix after

--- a/localisation/KR_Hawaii_l_english.yml
+++ b/localisation/KR_Hawaii_l_english.yml
@@ -3,6 +3,7 @@
 ### Foci ###
 HAW_politics:0 "Future of Hawai'i"
 HAW_politics_desc:0 ""
+
 ### Politics Foci ###
 HAW_monarchy:0 "Restore the Monarchy"
 HAW_monarchy_desc:0 ""
@@ -164,9 +165,10 @@ HAW_paternal_autocrat_party:0 "HFP"
 HAW_paternal_autocrat_party_long:0 "Hawai'i First Party"
 HAW_national_populist_party:0 "HFP"
 HAW_national_populist_party_long:0 "Hawai'i First Party"
+
 ### Ideas ###
 
-### Cosmetic Tag ###
+### Cosmetic Tags ###
 HAW_kingdom_social_democrat:0 "Kingdom of Hawai'i"
 HAW_kingdom_social_liberal:0 "Kingdom of Hawai'i"
 HAW_kingdom_market_liberal:0 "Kingdom of Hawai'i"
@@ -178,6 +180,7 @@ HAW_commune_totalist:0 "Commune of Hawai'i"
 HAW_commune_radical_socialist:0 "Commune of Hawai'i"
 HAW_commune_syndicalist:0 "Commune of Hawai'i"
 HAW_commune_social_democrat:0 "Commune of Hawai'i"
+
 ### Opinion Modifiers ###
 INDHAW_CAL:0 "Hawaii remain independent"
 INDHAW:0 "Hawaii remain independent"
@@ -276,7 +279,7 @@ hawaii.27.d:0 "While we were dealing with the syndicalists here in America, so t
 hawaii.27.a:0 "Aloha Hawaii!"
 
 hawaii.28.t:0 "The Future of Hawai'i?"
-hawaii.28.d:0 "We are now cut off from America and for the first time in decades independent again. We must decide our fate. Some are clamoring for a return to the Monarchy of Hawai'i that was overthrown by the Americans in 1893. However others are claiming that the age of monarchy is dead and we should set up a republic inspired by the Americans. While union leaders working among the lower classes on the plantations and factories might try and make a move here."
+hawaii.28.d:0 "We are now cut off from America and for the first time in decades independent again. We must decide our fate. Some are clamouring for a return to the Monarchy of Hawai'i that was overthrown by the Americans in 1893. However others are claiming that the age of monarchy is dead and we should set up a republic inspired by the Americans. While union leaders working among the lower classes on the plantations and factories might try and make a move here."
 hawaii.28.a:0 "Lets Restore the Monarchy!"
 hawaii.28.b:0 "Lets establish a Republic"
 hawaii.28.c:0 "It is time for a revolution!"
@@ -287,7 +290,7 @@ hawaii.30.t:0 "Establishing a republic"
 hawaii.30.d:0 "At the ʻIolani Palace delegates from across Hawai'i have agreed to form a republic. All have taken an oath to protect and defend Hawai'i. Crowds have gathered outside to hear the proclamation of a republic cheering on. There will be much work to set up the republic of Hawai'i, not the least of an election will need to be held in the future. "
 hawaii.30.a:0 "Long Live Hawai'i"
 hawaii.31.t:0 "The Hawai'ian Revolution!"
-hawaii.31.d:0 "While the rich plantation owners, industrialists, nobility all gathered in Honolulu to discuss the future of Hawai'i they paid little heed to the poor toiling away on the plantations or in the factories. Following the lead of the CSA in America, a number of labor organizes like Jack Hall have gone to the various plantations and factories and have lead an insurrection against the ruling elites. Fleeing from Honolulu as fast as they can, a new government was set up in the capital, a government truly for the people."
+hawaii.31.d:0 "While the rich plantation owners, industrialists, nobility all gathered in Honolulu to discuss the future of Hawai'i they paid little heed to the poor toiling away on the plantations or in the factories. Following the lead of the CSA in America, a number of labour organises like Jack Hall have gone to the various plantations and factories and have lead an insurrection against the ruling elites. Fleeing from Honolulu as fast as they can, a new government was set up in the capital, a government truly for the people."
 hawaii.31.a:0 "Break the Chains!"
 hawaii.32.t:0 ""
 hawaii.32.d:0 ""
@@ -298,7 +301,4 @@ hawaii.33.a:0 ""
 hawaii.34.t:0 ""
 hawaii.34.d:0 ""
 hawaii.34.a:0 ""
-
-
-
 
