added tags and basic info for MYS and TRV

--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -6746,3 +6746,65 @@ MNS_syndicalist_DEF:0 "the Mon Commune"
 MNS_totalist:0 "Mon Commune"
 MNS_totalist_ADJ:0 "Mon"
 MNS_totalist_DEF:0 "the Mon Commune"
+
+MYS_authoritarian_democrat:0 "Mysore"
+MYS_authoritarian_democrat_ADJ:0 "Mysorean"
+MYS_authoritarian_democrat_DEF:0 "Mysore"
+MYS_market_liberal:0 "Mysore"
+MYS_market_liberal_ADJ:0 "Mysorean"
+MYS_market_liberal_DEF:0 "Mysore"
+MYS_national_populist:0 "Mysore"
+MYS_national_populist_ADJ:0 "Mysorean"
+MYS_national_populist_DEF:0 "Mysore"
+MYS_paternal_autocrat:0 "Mysore"
+MYS_paternal_autocrat_ADJ:0 "Mysorean"
+MYS_paternal_autocrat_DEF:0 "Mysore"
+MYS_radical_socialist:0 "Mysore Commune"
+MYS_radical_socialist_ADJ:0 "Mysorean"
+MYS_radical_socialist_DEF:0 "the Mysore Commune"
+MYS_social_conservative:0 "Mysore"
+MYS_social_conservative_ADJ:0 "Mysorean"
+MYS_social_conservative_DEF:0 "Mysore"
+MYS_social_democrat:0 "Mysore"
+MYS_social_democrat_ADJ:0 "Mysorean"
+MYS_social_democrat_DEF:0 "Mysore"
+MYS_social_liberal:0 "Mysore"
+MYS_social_liberal_ADJ:0 "Mysorean"
+MYS_social_liberal_DEF:0 "Mysore"
+MYS_syndicalist:0 "Mysore Commune"
+MYS_syndicalist_ADJ:0 "Mysorean"
+MYS_syndicalist_DEF:0 "the Mysore Commune"
+MYS_totalist:0 "Mysore Commune"
+MYS_totalist_ADJ:0 "Mysorean"
+MYS_totalist_DEF:0 "the Mysore Commune"
+
+TRV_authoritarian_democrat:0 "Travancore"
+TRV_authoritarian_democrat_ADJ:0 "Travancorean"
+TRV_authoritarian_democrat_DEF:0 "Travancore"
+TRV_market_liberal:0 "Travancore"
+TRV_market_liberal_ADJ:0 "Travancorean"
+TRV_market_liberal_DEF:0 "Travancore"
+TRV_national_populist:0 "Travancore"
+TRV_national_populist_ADJ:0 "Travancorean"
+TRV_national_populist_DEF:0 "Travancore"
+TRV_paternal_autocrat:0 "Travancore"
+TRV_paternal_autocrat_ADJ:0 "Travancorean"
+TRV_paternal_autocrat_DEF:0 "Travancore"
+TRV_radical_socialist:0 "Travancore Commune"
+TRV_radical_socialist_ADJ:0 "Travancorean"
+TRV_radical_socialist_DEF:0 "the Travancore Commune"
+TRV_social_conservative:0 "Travancore"
+TRV_social_conservative_ADJ:0 "Travancorean"
+TRV_social_conservative_DEF:0 "Travancore"
+TRV_social_democrat:0 "Travancore"
+TRV_social_democrat_ADJ:0 "Travancorean"
+TRV_social_democrat_DEF:0 "Travancore"
+TRV_social_liberal:0 "Travancore"
+TRV_social_liberal_ADJ:0 "Travancorean"
+TRV_social_liberal_DEF:0 "Travancore"
+TRV_syndicalist:0 "Travancore Commune"
+TRV_syndicalist_ADJ:0 "Travancorean"
+TRV_syndicalist_DEF:0 "the Travancore Commune"
+TRV_totalist:0 "Travancore Commune"
+TRV_totalist_ADJ:0 "Travancorean"
+TRV_totalist_DEF:0 "the Travancore Commune"
