smallest commit-gave Krakow an accent

--- a/localisation/victory_points_l_english.yml
+++ b/localisation/victory_points_l_english.yml
@@ -446,7 +446,7 @@ VICTORY_POINTS_9355:0 "Orel"
 VICTORY_POINTS_9379:0 "Leeds"
 VICTORY_POINTS_9392:0 "Edinburgh"
 VICTORY_POINTS_9417:0 "Rostov-na-Donu"
-VICTORY_POINTS_9427:0 "Krakow"
+VICTORY_POINTS_9427:0 "Kraków"
 VICTORY_POINTS_9431:0 "Middelburg"
 VICTORY_POINTS_9434:0 "Le Havre"
 VICTORY_POINTS_9450:0 "Chicago"
