some more work for the CSA

--- a/localisation/KR_Combined_Syndicates_of_America_l_english.yml
+++ b/localisation/KR_Combined_Syndicates_of_America_l_english.yml
@@ -356,8 +356,8 @@ CSA_war_plan_red:0 "War Plan Red"
 CSA_war_plan_red_desc:0 "The British Royal family in Canada represents one of the most dangerous enemies to the American people. We must begin planning on how to fight the Canadians and their Allies."
 CSA_great_northern_wall:0 "Great Northern Wall"
 CSA_great_northern_wall_desc:0 "We must build up the border between the CSA and Canada. We shall build forts along the border to have a wall against the Northern Tyrants."
-CSA_naval_exrcises:0 "Naval Exercises"
-CSA_naval_exrcises_desc:0 "The Reactionary British Empire still holds many people in chains across the world. We should send the navy to show them that America will bring them liberty."
+CSA_entente_embargo:0 "Cut off the Entente"
+CSA_entente_embargo:0 "To prepare for war against the Entente we must cut off their ability to wage war against the people of America. We shall institute an Embargo against the entente and destroy them before the guns are even fired."
 CSA_liberate_canada:0 "Liberate Canada"
 CSA_liberate_canada_desc:0 "All the preparations are done. It is time to strike the beast itself. Time to liberate the Canadians from the tyrannical British Royal family."
 CSA_fate_of_the_empire:0 "Fate of the British Empire"
