--- a/localisation/victory_points_l_english.yml
+++ b/localisation/victory_points_l_english.yml
@@ -37,7 +37,7 @@ VICTORY_POINTS_688:0 "Salzburg"
 VICTORY_POINTS_690:0 "Brassó"
 VICTORY_POINTS_692:0 "München"
 VICTORY_POINTS_740:0 "Bilbao"
-VICTORY_POINTS_758:0 "Coruna"
+VICTORY_POINTS_758:0 "La Coruña"
 VICTORY_POINTS_778:0 "Annecy"
 VICTORY_POINTS_788:0 "Norfolk"
 VICTORY_POINTS_792:0 "Beyrut"
