--- a/localisation/KR_Combined_Syndicates_of_America_l_english.yml
+++ b/localisation/KR_Combined_Syndicates_of_America_l_english.yml
@@ -11,7 +11,7 @@ CSA_PURGED_PSA:0 "PSA leadership purged"
 CSA_NO_PURGED_PSA:0 "PSA leadership works for us"
 CSA_RUSTBELT:0 "Rustbelt resources"
 CSA_fighting_women:0 "Fighting Women"
-CSA_fighting_women_desc:0 "That's the Rebel Girl, that's the Rebel Girl! / To the working class she's a precious pearl. / She brings courage, pride and joy / To the fighting Rebel Boy. / We've had girls before, but we eed some more / In the Industrial Workers of the World. For it's great to fight for freedom / With a Rebel Girl"
+CSA_fighting_women_desc:0 "That's the Rebel Girl, that's the Rebel Girl! / To the working class she's a precious pearl. / She brings courage, pride and joy / To the fighting Rebel Boy. / We've had girls before, but we need some more / In the Industrial Workers of the World. For it's great to fight for freedom / With a Rebel Girl"
 CSA_milita_army:0 "A Militia Based Army"
 CSA_milita_army2:0 "A Militia Based Army"
 CSA_organized_army:0 "The American Red Army"
@@ -61,7 +61,6 @@ CSA_worker_republic:0 "Worker's Republic"
 CSA_worker_republic_desc:0 ""
 CSA_centralized_union:0 "United Socialistic States of America"
 CSA_centralized_union_desc:0 ""
-
 
 ### Parties ###
 CSA_totalist_party:0 "CSA"
@@ -281,6 +280,7 @@ CSA_ussa_desc:0 "America has been transformed from a capitalistic dictatorship o
 CSA_red_constitution:0 "Red Constitution"
 CSA_red_constitution_desc:0 "Now that the form of government has been properly hammered out, it is time to write out the second American Constitution. This one will truly be for the people, by the people, and of the people. Long live the Revolution!"
 CSA_red_constitution_tooltip:0 "You will get a National Idea depending on which path you go down"
+
 ### Reconstruction Foci ###
 CSA_reconstruction:0 "Reconstructing America"
 CSA_reconstruction_desc:0 "Now that the Second constitution convention has come to a close and we have written up the new constitution, it is time to focus on reconstruction efforts and rebuilding from the civil war. The revolutionary war was a bloody conflict, now it is time to rebuild. "
@@ -311,7 +311,7 @@ CSA_recovery_from_the_war_desc:0 "All the regions from coast to coast have been 
 CSA_end_of_reconstruction:0 "End of Reconstruction"
 CSA_end_of_reconstruction_desc:0 "The era of reconstruction has come to a close. It has taken a couple of years for reconstruction to be done and it will take time for the impacts of the revolution to be fully complete throughout the country. "
 
-### Five Year Plan ####
+### Five Year Plan ###
 CSA_five_year_plan:0 "Five Year Plan"
 CSA_five_year_plan_desc:0 "Now that some time has passed since reconstruction it is time to begin the five year plan. This is a grand industrial plan that shall involve all of society to modernise and help industrialise the country and prepare for it the future. "
 CSA_work_project_agency:0 "Work Project Agency"
@@ -414,7 +414,7 @@ CAN_USA_GOV_EXILE:0 "Exiled USA gov goes to Canada"
 CSA_mexican_american_friendship:0 "Mexican-American friendship"
 CSA_mexican_american_trade:0 "Mexican-American trade treaty"
 
-### Event text ###
+### Events ###
 combinedsyndicates.1.t:0 "The Second American Revolution"
 combinedsyndicates.1.d:0 "The Central Committee of the Combined Syndicates of America have issued a proclamation that all power in the former United States has now legitimately passed to the working classes, to be exercised through a Continental Chamber of Syndicates and defended from external enemies by the Revolutionary Syndicate Guards. The Secretary of the new Chamber is..."
 combinedsyndicates.1.a:0 "Norman Thomas, to improve worker's rights"
@@ -442,7 +442,7 @@ combinedsyndicates.5.b:0 "We must reorganise our own country"
 combinedsyndicates.6.t:0 "The CSA wants to join the Internationale"
 combinedsyndicates.6.d:0 "The Combined Syndicates of America expressed their intention to join our alliance. For the world revolution!"
 combinedsyndicates.6.a:0 "Welcome!!"
-combinedsyndicates.7.t:0 "Emmigrants"
+combinedsyndicates.7.t:0 "Emigrants"
 combinedsyndicates.7.d:0 "Some of The elites and the upper class of the Great Lakes have left their homes and took their families across the border to Royalist Canada."
 combinedsyndicates.7.a:0 "Close the Ambassador Bridge and Patrol the Detroit River!"
 combinedsyndicates.7.b:0 "Let The Pitiful, Isolated Individuals go where they belong!"
@@ -497,7 +497,7 @@ combinedsyndicates.22.a:0 "The Federalist plan wins"
 combinedsyndicates.22.b:0 "The Centralists Plan wins"
 combinedsyndicates.22.c:0 "The Unionists Plan wins"
 combinedsyndicates.23.t:0 "General Seceretary's Power"
-combinedsyndicates.23.d:0 "The next day of debates has the delegates talking about how much power the General Secretary should have. The Unionists begin the day by saying that the position's power should be weak to prevent a dictatorship that would destroy America. The centralists counter that only with a strong executive can the American worker be protected from reactionaries. Once again the Federalists faction has them playing the center trying to balance the two factions and argue for a strong executive but one with plenty of checks and balances and a separation of powers to prevent him or her from being a dictatorship."
+combinedsyndicates.23.d:0 "The next day of debates has the delegates talking about how much power the General Secretary should have. The Unionists begin the day by saying that the position's power should be weak to prevent a dictatorship that would destroy America. The Centralists counter that only with a strong executive can the American worker be protected from reactionaries. Once again the Federalists faction has them playing the center trying to balance the two factions and argue for a strong executive but one with plenty of checks and balances and a separation of powers to prevent him or her from being a dictatorship."
 combinedsyndicates.23.a:0 "The Federalists balanced executive"
 combinedsyndicates.23.b:0 "The Centralists strong executive"
 combinedsyndicates.23.c:0 "The Unionists Weak Executive"
