--- a/localisation/KR_Georgia_l_english.yml
+++ b/localisation/KR_Georgia_l_english.yml
@@ -1,119 +1,117 @@
 ﻿l_english:
 
+### Foci ###
+GEO_The_Peoples_Guard:0 "The People's Guard"
+GEO_The_Peoples_Guard_desc:0 ""
+GEO_Army_Modernization:0 "Army Modernisation"
+GEO_Army_Modernization_desc:0 ""
+GEO_New_Infantry_Weapons:0 "New Infantry Weapons"
+GEO_New_Infantry_Weapons_desc:0 ""
+GEO_Doctrine_Focus:0 "Doctrine Focus"
+GEO_Doctrine_Focus_desc:0 ""
+GEO_Caucasus_Fortification:0 "Caucasus Fortification"
+GEO_Caucasus_Fortification_desc:0 ""
+GEO_Artillery_Weaponry:0 "Artillery weaponry"
+GEO_Artillery_Weaponry_desc:0 ""
+GEO_Army_Motorization:0 "Army Motorisation"
+GEO_Army_Motorization_desc:0 ""
+GEO_Army_Mechanization:0 "Army Mechanisation"
+GEO_Army_Mechanization_desc:0 ""
+GEO_Establish_Tank_Divisions:0 "Establish Tank Divisions"
+GEO_Establish_Tank_Divisions_desc:0 ""
+GEO_Mountaineer_Training:0 "Mountaineer Training"
+GEO_Mountaineer_Training_desc:0 ""
+GEO_Northern_Fortification:0 "Northern Fortification"
+GEO_Northern_Fortification_desc:0 ""
+GEO_Southern_Fortification:0 "Southern Fortification"
+GEO_Southern_Fortification_desc:0 ""
+GEO_Political_Indoctrination:0 "Political Indoctrination"
+GEO_Political_Indoctrination_desc:0 ""
+GEO_Political_Commissars:0 "Appoint Political Commissars"
+GEO_Political_Commissars_desc:0 ""
+GEO_Reform_High_Command:0 "Reform High Command"
+GEO_Reform_High_Command_desc:0 ""
+GEO_Foreign_Policy:0 "Foreign Policy"
+GEO_Foreign_Policy_desc:0 ""
+GEO_Caucasus_Expansion:0 "Caucasus Expansion"
+GEO_Caucasus_Expansion_desc:0 ""
+GEO_Military_Unification:0 "Military Unification"
+GEO_Military_Unification_desc:0 ""
+GEO_Claims_On_Azerbaijan:0 "Claims on Azerbaijan"
+GEO_Claims_On_Azerbaijan_desc:0 ""
+GEO_Claim_Armenia:0 "Claim Armenia"
+GEO_Claim_Armenia_desc:0 ""
+GEO_Diplomatic_Unification:0 "Diplomatic Unification"
+GEO_Diplomatic_Unification_desc:0 ""
+GEO_Transcaucasian_Conference:0 "Transcaucasian Conference"
+GEO_Transcaucasian_Conference_desc:0 ""
+GEO_Centralize_The_Federation:0 "Centralise Transcaucasian Federation"
+GEO_Centralize_The_Federation_desc:0 ""
+GEO_Greater_Georgia:0 "Greater Georgia"
+GEO_Greater_Georgia_desc:0 ""
+GEO_Northern_Expansion:0 "Northern Expansion"
+GEO_Northern_Expansion_desc:0 ""
+GEO_War_With_Don-Kuban:0 "War With Don-Kuban"
+GEO_War_With_Don-Kuban_desc:0 ""
+GEO_Ultimatum_To_Ottomans:0 "Ultimatum to Ottomans"
+GEO_Ultimatum_To_Ottomans_desc:0 ""
+GEO_Form_Transcaucasia:0 "Form Transcaucasian Socialist Republic"
+GEO_Form_Transcaucasia_desc:0 ""
+GEO_Expand_Tblisi_Airbase:0 "Expand Tblisi Airbase"
+GEO_Fighter_Effort:0 "Fighter Effort"
+GEO_Fighter_Effort_desc:0 ""
+GEO_Bomber_Effort:0 "Bomber Effort"
+GEO_Bomber_Effort_desc:0 ""
+GEO_Close_Air_Support_Doctrine:0 "Close Air Support Doctrine"
+GEO_Air_Superiority_Doctrine:0 "Air Superiority Doctrine"
+GEO_Internal_Affairs:0 "Internal Affairs"
+GEO_Internal_Affairs_desc:0 ""
+GEO_Poltical_Focus:0 "Political Focus"
+GEO_Political_Focus_desc:0 ""
+GEO_Totalist_Ideology:0 "Entrench the Totalist Ideology"
+GEO_Totalist_Ideology_desc:0 ""
+GEO_Dissolve_Parliament:0 "Dissolve the Parliament"
+GEO_Dissolve_Parliament_desc:0 ""
+GEO_Tolerate_Democrats:0 "Tolerate Democratic Parties"
+GEO_Tolerate_Democrats_desc:0 ""
+GEO_Strengthen_Parliament:0 "Strengthen Parliament"
+GEO_Strengthen_Parliament_desc:0 ""
+GEO_Political_Reforms:0 "Enact Political Reforms"
+GEO_Political_Reforms_desc:0 ""
+GEO_Education_Focus:0 "Education Focus"
+GEO_Education_Focus_desc:0 ""
+GEO_Economic_Expansion:0 "Economic Expansion"
+GEO_Economic_Expansion_desc:0 ""
+GEO_Infrastructure_Focus:0 "Infrastructure Focus"
+GEO_Infrastructure_Focus_desc:0 ""
+GEO_Georgian_Railways:0 "Georgian Railways"
+GEO_Georgian_Railways_desc:0 ""
+GEO_Batum-Baku_Railway:0 "Build Batum-Baku Railway"
+GEO_Batum-Baku_Railway_desc:0 ""
+GEO_Industrial_Focus:0 "Industrial Focus"
+GEO_Industrial_Focus_desc:0 "" 
+GEO_Economic_Liberalization1:0 "Economic Liberalisation"
+GEO_Economic_Liberalization1_desc:0 ""
+GEO_Economic_Liberalization2:0 "Civilian Focus"
+GEO_Economic_Liberalization2_desc:0 ""
+GEO_Expand_Baku_Oilfields:0 "Expand Baku Oilfields"
+GEO_Expand_Baku_Oilfields_desc:0 ""
+GEO_Totalist_Economy1:0 "Totalist Economic Reforms"
+GEO_Totalist_Economy1_desc:0 ""
+GEO_Totalist_Economy2:0 "Equipment Production Efficiency"
+GEO_Totalist_Economy2_desc:0 ""
+GEO_Industrial_Conversion:0 "Industrial Conversion"
+GEO_Industrial_Conversion_desc:0 ""
+GEO_Invest_In_Universities:0 "Invest in Universities"
+GEO_Invest_In_Universities_desc:0 ""
+GEO_Expand_Azerbaijan_State_Oil_Academy:0 "Expand Azerbaijan State Oil Academy"
+GEO_Expand_Azerbaijan_State_Oil_Academy_desc:0 ""
 
-### Focus Tree ###
- GEO_The_Peoples_Guard:0 "The People's Guard"
- GEO_The_Peoples_Guard_desc:0 ""
- GEO_Army_Modernization:0 "Army Modernization"
- GEO_Army_Modernization_desc:0 ""
- GEO_New_Infantry_Weapons:0 "New Infantry Weapons"
- GEO_New_Infantry_Weapons_desc:0 ""
- GEO_Doctrine_Focus:0 "Doctrine Focus"
- GEO_Doctrine_Focus_desc:0 ""
- GEO_Caucasus_Fortification:0 "Caucasus Fortification"
- GEO_Caucasus_Fortification_desc:0 ""
- GEO_Artillery_Weaponry:0 "Artillery weaponry"
- GEO_Artillery_Weaponry_desc:0 ""
- GEO_Army_Motorization:0 "Army Motorization"
- GEO_Army_Motorization_desc:0 ""
- GEO_Army_Mechanization:0 "Army Mechanization"
- GEO_Army_Mechanization_desc:0 ""
- GEO_Establish_Tank_Divisions:0 "Establish Tank Divisions"
- GEO_Establish_Tank_Divisions_desc:0 ""
- GEO_Mountaineer_Training:0 "Mountaineer Training"
- GEO_Mountaineer_Training_desc:0 ""
- GEO_Northern_Fortification:0 "Northern Fortification"
- GEO_Northern_Fortification_desc:0 ""
- GEO_Southern_Fortification:0 "Southern Fortification"
- GEO_Southern_Fortification_desc:0 ""
- GEO_Political_Indoctrination:0 "Political Indoctrination"
- GEO_Political_Indoctrination_desc:0 ""
- GEO_Political_Commissars:0 "Appoint Political Commissars"
- GEO_Political_Commissars_desc:0 ""
- GEO_Reform_High_Command:0 "Reform High Command"
- GEO_Reform_High_Command_desc:0 ""
- GEO_Foreign_Policy:0 "Foreign Policy"
- GEO_Foreign_Policy_desc:0 ""
- GEO_Caucasus_Expansion:0 "Caucasus Expansion"
- GEO_Caucasus_Expansion_desc:0 ""
- GEO_Military_Unification:0 "Military Unification"
- GEO_Military_Unification_desc:0 ""
- GEO_Claims_On_Azerbaijan:0 "Claims on Azerbaijan"
- GEO_Claims_On_Azerbaijan_desc:0 ""
- GEO_Claim_Armenia:0 "Claim Armenia"
- GEO_Claim_Armenia_desc:0 ""
- GEO_Diplomatic_Unification:0 "Diplomatic Unification"
- GEO_Diplomatic_Unification_desc:0 ""
- GEO_Transcaucasian_Conference:0 "Transcaucasian Conference"
- GEO_Transcaucasian_Conference_desc:0 ""
- GEO_Centralize_The_Federation:0 "Centralize Transcaucasian Federation"
- GEO_Centralize_The_Federation_desc:0 ""
- GEO_Greater_Georgia:0 "Greater Georgia"
- GEO_Greater_Georgia_desc:0 ""
- GEO_Northern_Expansion:0 "Northern Expansion"
- GEO_Northern_Expansion_desc:0 ""
- GEO_War_With_Don-Kuban:0 "War With Don-Kuban"
- GEO_War_With_Don-Kuban_desc:0 ""
- GEO_Ultimatum_To_Ottomans:0 "Ultimatum to Ottomans"
- GEO_Ultimatum_To_Ottomans_desc:0 ""
- GEO_Form_Transcaucasia:0 "Form Transcaucasian Socialist Republic"
- GEO_Form_Transcaucasia_desc:0 ""
- GEO_Expand_Tblisi_Airbase:0 "Expand Tblisi Airbase"
- GEO_Fighter_Effort:0 "Fighter Effort"
- GEO_Fighter_Effort_desc:0 ""
- GEO_Bomber_Effort:0 "Bomber Effort"
- GEO_Bomber_Effort_desc:0 ""
- GEO_Close_Air_Support_Doctrine:0 "Close Air Support Doctrine"
- GEO_Air_Superiority_Doctrine:0 "Air Superiority Doctrine"
- GEO_Internal_Affairs:0 "Internal Affairs"
- GEO_Internal_Affairs_desc:0 ""
- GEO_Poltical_Focus:0 "Political Focus"
- GEO_Political_Focus_desc:0 ""
- GEO_Totalist_Ideology:0 "Entrench the Totalist Ideology"
- GEO_Totalist_Ideology_desc:0 ""
- GEO_Dissolve_Parliament:0 "Dissolve the Parliament"
- GEO_Dissolve_Parliament_desc:0 ""
- GEO_Tolerate_Democrats:0 "Tolerate Democratic Parties"
- GEO_Tolerate_Democrats_desc:0 ""
- GEO_Strengthen_Parliament:0 "Strengthen Parliament"
- GEO_Strengthen_Parliament_desc:0 ""
- GEO_Political_Reforms:0 "Enact Political Reforms"
- GEO_Political_Reforms_desc:0 ""
- GEO_Education_Focus:0 "Education Focus"
- GEO_Education_Focus_desc:0 ""
- GEO_Economic_Expansion:0 "Economic Expansion"
- GEO_Economic_Expansion_desc:0 ""
- GEO_Infrastructure_Focus:0 "Infrastructure Focus"
- GEO_Infrastructure_Focus_desc:0 ""
- GEO_Georgian_Railways:0 "Georgian Railways"
- GEO_Georgian_Railways_desc:0 ""
- GEO_Batum-Baku_Railway:0 "Build Batum-Baku Railway"
- GEO_Batum-Baku_Railway_desc:0 ""
- GEO_Industrial_Focus:0 "Industrial Focus"
- GEO_Industrial_Focus_desc:0 "" 
- GEO_Economic_Liberalization1:0 "Economic Liberalization"
- GEO_Economic_Liberalization1_desc:0 ""
- GEO_Economic_Liberalization2:0 "Civilian Focus"
- GEO_Economic_Liberalization2_desc:0 ""
- GEO_Expand_Baku_Oilfields:0 "Expand Baku Oilfields"
- GEO_Expand_Baku_Oilfields_desc:0 ""
- GEO_Totalist_Economy1:0 "Totalist Economic Reforms"
- GEO_Totalist_Economy1_desc:0 ""
- GEO_Totalist_Economy2:0 "Equipment Production Efficiency"
- GEO_Totalist_Economy2_desc:0 ""
- GEO_Industrial_Conversion:0 "Industrial Conversion"
- GEO_Industrial_Conversion_desc:0 ""
- GEO_Invest_In_Universities:0 "Invest in Universities"
- GEO_Invest_In_Universities_desc:0 ""
- GEO_Expand_Azerbaijan_State_Oil_Academy:0 "Expand Azerbaijan State Oil Academy"
- GEO_Expand_Azerbaijan_State_Oil_Academy_desc:0 ""
- 
- ### Events ###
- geo.1.t:0 "Socialist Republic of Georgia"
- geo.1.d:0 "The Georgian state was formally established in 1918 after the Treaty of Brest-Litovsk, and the nation found itself surrounded by the immediate chaos of the Russian Civil War. Georgia quickly became a stronghold for the Menshevik Party, and managed to stay neutral during the Civil War, avoiding confrontation with the White and Red forces. The now ruling Menshevik party banded together with several Bolshevik and Social Revolutionary figures to form a new 'Caucasian' brand of Socialism, which formed a new parliament. Into the 1920's, the country's industrial base developed surprisingly well, however with the integration and subsequent rise of several previously Bolshevik figures, such as Leventi Beria and Ioseb Jughashvili, the Menshevik party was quick to radicalize. The Republic's previously democratic system was slowly dissolving, with the 'Internal Security Service' becoming more involved in Politics. Soon the country's democratic constitution became obsolete, and the power was concentrated in the hands of the Supreme Economic Council, headed by Lavrenti Beria. The local peasantry and large aspects of the military have started to become agitated with the increased totalitarianism of the country, and Beria has started to look towards other Caucasus countries to expand. Whatever the future may hold, the future of Georgia is without a doubt uncertain."
- geo.1.a:0 "Interesting..."
- geo.2.t:0 "Lavrenti Beria makes his move"
- geo.2.d:0 "After joining the Menshevik party in 1921 and curbing a Bolshevik revolt, Lavrenti Beria preceded to rise in the ranks of the Georgian government. In 1931, Beria was appointed General Secretary of the Menshevik Party, allowing him to be very influential in the government, pushing for industrialization and creating an immense bureaucratic administration to control the country. By 1936, the Supreme Economic Council that de facto governs the Georgian government is firmly under the control of Beria, and he is in a position to effectively seize control of the government from the current Chairman, Grigol Ordzhonikidze."
- geo.2.a:0 "Beria takes full control of the government!"
- 
- 
+### Events ###
+geo.1.t:0 "Socialist Republic of Georgia"
+geo.1.d:0 "The Georgian state was formally established in 1918 after the Treaty of Brest-Litovsk, and the nation found itself surrounded by the immediate chaos of the Russian Civil War. Georgia quickly became a stronghold for the Menshevik Party, and managed to stay neutral during the Civil War, avoiding confrontation with the White and Red forces. The now ruling Menshevik party banded together with several Bolshevik and Social Revolutionary figures to form a new 'Caucasian' brand of Socialism, which formed a new parliament. Into the 1920's, the country's industrial base developed surprisingly well, however with the integration and subsequent rise of several previously Bolshevik figures, such as Leventi Beria and Ioseb Jughashvili, the Menshevik party was quick to radicalise. The Republic's previously democratic system was slowly dissolving, with the 'Internal Security Service' becoming more involved in Politics. Soon the country's democratic constitution became obsolete, and the power was concentrated in the hands of the Supreme Economic Council, headed by Lavrenti Beria. The local peasantry and large aspects of the military have started to become agitated with the increased totalitarianism of the country, and Beria has started to look towards other Caucasus countries to expand. Whatever the future may hold, the future of Georgia is without a doubt uncertain."
+geo.1.a:0 "Interesting..."
+geo.2.t:0 "Lavrenti Beria makes his move"
+geo.2.d:0 "After joining the Menshevik party in 1921 and curbing a Bolshevik revolt, Lavrenti Beria preceded to rise in the ranks of the Georgian government. In 1931, Beria was appointed General Secretary of the Menshevik Party, allowing him to be very influential in the government, pushing for industrialisation and creating an immense bureaucratic administration to control the country. By 1936, the Supreme Economic Council that de facto governs the Georgian government is firmly under the control of Beria, and he is in a position to effectively seize control of the government from the current Chairman, Grigol Ordzhonikidze."
+geo.2.a:0 "Beria takes full control of the government!"
+
