Work on Fengtian Focus Tree.

--- a/localisation/KR_Fengtian_l_english.yml
+++ b/localisation/KR_Fengtian_l_english.yml
@@ -66,6 +66,8 @@ FNG_LEAVES_JAP:0 "Fengtian breaks away from Japan"
 SQI_ALL_FNG:0 "Shangqing Allies Fengtian"
 SQI_NO_ONE_NAT:0 "Refuse all Offers"
 FNG_SQI_UNION_JAP:0 "Fengtian and Shangqing United"
+#New Opinion Modifiers
+FNG_MANTETSU_COLLAB:0 "Mantetsu Collaboration"
 
 ### Foci ###
 FNG_Preservation_of_the_Xinhai_Order:0 "Preservation of the Xinhai Order"
